--- a/taskdesk.html
+++ b/taskdesk.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <link rel="stylesheet" href="MY_style.css" />
-  <script src="MY_script.js"></script>
+  <link rel="stylesheet" href="style.css" />
+  <script src="script.js"></script>
   <body>
     <div>
       <div class="buttons" id="but">
