--- a/taskdesk.html
+++ b/taskdesk.html
@@ -4,7 +4,7 @@
   <script src="script.js"></script>
   <body>
     <div>
-      <div id="cc"></div>
+      <div id="calendar"></div>
     </div>
     <div id="backlog"></div>
   </body>
