--- a/taskdesk.html
+++ b/taskdesk.html
@@ -3,9 +3,11 @@
   <link rel="stylesheet" href="style.css" />
   <script src="script.js"></script>
   <body>
-    <div>
+    <div id="main">
       <div id="calendar"></div>
     </div>
-    <div id="backlog"></div>
+    <div id="optional">
+      <div id="backlog"></div>
+    </div>
   </body>
 </html>
