--- a/taskdesk.html
+++ b/taskdesk.html
@@ -2,6 +2,9 @@
 <html>
   <link rel="stylesheet" href="style.css" />
   <script src="script.js"></script>
+  <script src="calendar.js"></script>
+  <script src="backlog.js"></script>
+
   <body>
     <div id="main">
       <div id="calendar"></div>
