--- a/taskdesk.html
+++ b/taskdesk.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <link rel="stylesheet" href="style.css" />
-  <script src="script.js"></script>
+  <script src="main.js"></script>
   <script src="calendar.js"></script>
   <script src="backlog.js"></script>
 
