--- a/taskdesk.html
+++ b/taskdesk.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html>
   <link rel="stylesheet" href="style.css" />
-
+  <script src="calendar.js"></script>
+  <script src="backlog.js"></script>
+  <script src="main.js"></script>
   <body>
-    <div id="main">
-      <div id="calendar"></div>
-    </div>
-    <div id="optional">
-      <div id="backlog"></div>
-    </div>
-    <script src="calendar.js"></script>
-    <script src="backlog.js"></script>
-    <script src="main.js"></script>
+    <div id="main"></div>
+    <div id="optional"></div>
   </body>
 </html>
